<resources>
    <string name="app_name">Split Your Bill</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register_button">Not A Member? Sign Up Here...</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail_id">E-mail Id</string>
    <string name="title_activity_profile">Split Your Bill</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>
    <string name="title_activity_user_auth">UserAuthActivity</string>
    <string name="tab_text_1">Log In</string>
    <string name="tab_text_2">Sign Up</string>
</resources>
